# docker-api-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml
codegen/: build.sh  pom.xml
codegen/src/main/java/docker_api/codegen/: DockerApiCodegen.java
codegen/src/main/resources/docker-api/: .gitignore.mustache  Cargo.mustache  models.mustache
docker-api-stubs/: build.sh
docker-api-stubs/base/: models.rs
docker-api-stubs/lib/: Cargo.toml
docker-api-stubs/lib/src/: models.rs
examples/: attach.rs  common.rs  container.rs  containercopyfrom.rs  containercopyinto.rs  containercreate.rs  containerdelete.rs  containerexec.rs  containerinspect.rs  containerlogs.rs  containerprune.rs  containers.rs  containerstatfiles.rs  custom_host.rs  data_usage.rs  events.rs  exec.rs  execinspect.rs  execresize.rs  export.rs  image.rs  imagebuild.rs  imagedelete.rs  imageinspect.rs  imagepull.rs  imagepull_auth.rs  images.rs  imagesearch.rs  imagetag.rs  import.rs  info.rs  network.rs  networkconnect.rs  networkcreate.rs  networkdelete.rs  networkdisconnect.rs  networkinspect.rs  networks.rs  service.rs  servicedelete.rs  (+11 more)
src/: builder.rs  container.rs  datetime.rs  detect_host.rs  docker.rs  errors.rs  event.rs  exec.rs  image.rs  lib.rs  models.rs  network.rs  plugin.rs  service.rs  stream.rs  tarball.rs  transport.rs  tty.rs  util.rs  version.rs  volume.rs
src/api/: common.rs  config.rs  container.rs  event.rs  exec.rs  image.rs  mod.rs  network.rs  node.rs  plugin.rs  secret.rs  service.rs  swarm.rs  system.rs  task.rs  volume.rs
src/api/common/: data.rs  mod.rs  opts.rs
src/api/container/: data.rs  mod.rs  models.rs  opts.rs
src/api/image/: data.rs  mod.rs  models.rs  opts.rs
src/api/network/: data.rs  mod.rs  models.rs  opts.rs
src/api/node/: data.rs  mod.rs  models.rs  opts.rs
src/api/plugin/: mod.rs  models.rs  opts.rs
src/api/service/: data.rs  mod.rs  models.rs  opts.rs
src/api/swarm/: data.rs  mod.rs  opts.rs
src/api/system/: data.rs  mod.rs  models.rs  opts.rs
src/api/volume/: data.rs  mod.rs  models.rs  opts.rs
src/conn/: mod.rs  transport.rs  tty.rs
src/opts/: config.rs  container.rs  exec.rs  image.rs  mod.rs  network.rs  node.rs  plugin.rs  secret.rs  service.rs  swarm.rs  system.rs  task.rs  volume.rs
tests/: common.rs  container_tests.rs  docker_tests.rs  image_tests.rs  network_tests.rs
