[package]
name = "docker-api"
version = "0.7.0"
authors = ["Wojciech Kępka <wojciech@wkepka.dev"]
description = "Interface to Docker API"
documentation = "https://docs.rs/docker-api"
homepage = "https://github.com/wojciechkepka/docker-api-rs"
repository = "https://github.com/wojciechkepka/docker-api-rs"
keywords = ["docker", "api", "containers", "unix"]
license = "MIT"
edition = "2018"
readme = "README.md"

[dependencies]
log = "0.4"
paste = "1"
thiserror = "1"

base64 = "0.13"

byteorder = "1.4"
bytes = "1.0"

chrono = { version="0.4", optional=true, features=["serde"] }

flate2 = "1.0"
tar = "0.4"

serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

pin-project = "1.0"

mime = "0.3"
url = "2.1"
tokio = "1.0"
futures-util = "0.3"
futures_codec = "0.4"

http = "0.2"
hyper = { version="0.14", features=["client", "http1", "tcp", "stream"] }
hyper-openssl = { version="0.9", optional=true }
openssl = { version="0.10", optional=true }

[target.'cfg(unix)'.dependencies]
hyperlocal = { version="0.8" }

[dev-dependencies]
env_logger = "0.8"
# Required for examples to run
futures = "0.3.1"
tokio = { version="1.0", features=["macros", "rt-multi-thread"] }
clap = "3.0.0-beta.5"
pretty_assertions = "0.7"

[features]
default = ["chrono"]
tls = ["openssl", "hyper-openssl"]
vendored-ssl = ["tls", "openssl/vendored"]
swarm = []


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
