[package]
name = "docker-api"
version = "0.11.0"
authors = ["Wojciech Kępka <wojciech@wkepka.dev"]
description = "Interface to Docker API"
documentation = "https://docs.rs/docker-api"
homepage = "https://github.com/vv9k/docker-api-rs"
repository = "https://github.com/vv9k/docker-api-rs"
keywords = ["docker"]
license = "MIT"
edition = "2021"
readme = "README.md"

[dependencies]
containers-api = "0.5"
#containers-api = { git = "https://github.com/vv9k/containers-api" }

docker-api-stubs = "0.3"

log = "0.4"
paste = "1"
thiserror = "1"

base64 = "0.13"

byteorder = "1.4"
bytes = "1.0"

chrono = { version="0.4", optional=true, features=["serde"] }

tar = "0.4"

serde = { version="1.0", features=["derive"] }
serde_json = "1.0"

url = "2.1"
futures-util = "0.3"
asynchronous-codec = "0.6"

http = "0.2"
hyper = { version="0.14", features=["client", "http1", "tcp", "stream"] }
hyper-openssl = { version="0.9", optional=true }
openssl = { version="0.10", optional=true }

[dev-dependencies]
env_logger = "0.8"
# Required for examples to run
futures = "0.3.1"
tokio = { version="1.0", features=["macros", "rt-multi-thread"] }
clap = { version = "3.0.0-beta.5", features = ["derive"] }
pretty_assertions = "0.7"

[features]
default = ["containers-api/chrono", "chrono"]
tls = ["containers-api/tls"]
vendored-ssl = ["tls", "containers-api/vendored-ssl"]
swarm = []


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
