[package]
name = "docker-api-stubs"
version = "0.4.0"
authors = [ "Wojciech Kępka <wojciech@wkepka.dev>" ]
description = "Generated Docker API swagger stubs for use in docker-api"
license = "MIT"
edition = "2021"

documentation = "https://docs.rs/docker-api-stubs"
homepage = "https://github.com/vv9k/docker-api-rs"
repository = "https://github.com/vv9k/docker-api-rs"
keywords = ["docker", "api", "stubs", "models"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = { version = "2", features = ["macros"] }
